changes to the api docs
